TextInputManager::GetTextSelection() should be called on focused widget.

Currently, in the following methods in RenderWidgetHostViewAura, we use
the active widget, i.e., the widget with focused text field to get text
selection information:
GetTextRange()
GetSelectionRange()
GetTextFromRange()

Using the active widget as opposed to the focused widget regressed the
long press touch quick menu on Aura. This is due to the call to
GetSelectionRange() which returns empty when the selection is on a
non-editable text. Using the focused widget is correct and fixes the
issue.

The corresponding unit tests are also modified so that we now test the
selection on "focused widget" as opposed to "active widget".

BUG=638898, 602723, 578168
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2255363002
Cr-Commit-Position: refs/heads/master@{#413795}

Former-commit-id: 9135773062a5f13e51348454c682d6661447c887