content/browser/frame_host/render_widget_host_view_child_frame.cc
@@ -55,6 +55,7 @@ RenderWidgetHostViewChildFrame::RenderWidgetHostViewChildFrame(
   RegisterSurfaceNamespaceId();
 
   host_->SetView(this);
+  GetTextInputManager();
 }
 
 RenderWidgetHostViewChildFrame::~RenderWidgetHostViewChildFrame() {
